--- a/src/components/keyboard.module.css
+++ b/src/components/keyboard.module.css
@@ -1,4 +1,3 @@
-
 .keyboardContainer {
   display: flex;
   flex-wrap: wrap;
@@ -11,6 +10,7 @@
   width: 50px;
   height: 70px;
 }
+
 .emptyKey {
   width: 25px;
   height: 70px;
@@ -19,11 +19,7 @@
   justify-content: center;
 }
 
-.enterKey {
-  width: 80px;
-  height: 70px;
-}
-
+.enterKey,
 .deleteKey {
   width: 80px;
   height: 70px;
@@ -45,4 +41,8 @@
   background-color: #aaa;
   border: #aaa solid 2px;
   color: black;
+}
+
+.keyboardContainer.inUse {
+  background-color: #99989800; /* Cambia el color de fondo cuando el teclado está en uso */
 }
