--- a/src/components/wordle.module.css
+++ b/src/components/wordle.module.css
@@ -1,5 +1,7 @@
 .mainContainer {
-    width: calc(70px * 5); /* Utiliza calc() para calcular el valor */
-    margin: 100px auto; /* Establece el margen superior e inferior en 100px y los laterales automáticos */
+    width: 100%; /* Ocupa todo el ancho disponible */
+    max-width: calc(70px * 5); /* Ancho máximo basado en el tamaño de los elementos hijos */
+    margin: 10px auto; /* Establece el margen superior e inferior en 10px y los laterales automáticos */
     text-align: center; /* Centra el contenido dentro del contenedor */
-}
+  }
+  
