--- a/src/components/navBar.module.css
+++ b/src/components/navBar.module.css
@@ -1,19 +1,21 @@
 /* styles.module.css */
-
 .navbar {
-    
-    background-color: #72717100; /* Color de fondo de la barra de navegación */
-    color: #fff; /* Color del texto */
-    padding: 10px 20px; /* Espaciado interno */
-    display: flex; /* Alinear elementos horizontalmente */
-    justify-content: space-between; /* Espacio entre los elementos */
-    
-  }
-  
-  .navbarBrand {
-    
-    font-size: 1.5rem; /* Tamaño del texto del logo */
-  }
+  background-color: #72717100;
+  color: #fff;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbarBrand {
+  display: flex;
+  align-items: center;
+}
+
+.navbarBrand h1 {
+  margin-left: -130px; /* Para mover el h1 hacia la izquierda */
+}
   
   .navbarMenu {
     
