--- a/src/components/playerCard.module.css
+++ b/src/components/playerCard.module.css
@@ -1,21 +1,39 @@
 /* playerCard.module.css */
-
 .playerCard {
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-    border-radius: 5px;
-    padding: 20px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .playerCard h3 {
-    margin-bottom: 10px;
-    font-size: 1.2rem;
-  }
-  
-  .playerCard p {
-    margin-bottom: 5px;
-    font-size: 1rem;
-    color: #333333;
-  }
+  background: linear-gradient(to bottom right, #ffffff, #f3f3f3);
+  border: 2px solid #e3e3e3;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  max-width: 300px;
+}
+
+.playerCard img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.cardHeader {
+  background: linear-gradient(to right, #007bff, #0056b3);
+  border-radius: 10px 10px 0 0;
+  color: white;
+  padding: 10px;
+}
+
+.cardDetails {
+  text-align: left;
+  margin-top: 10px;
+}
+
+.matching {
+  color: red; /* Cambia el color para destacar las propiedades coincidentes */
+}
+
+.playerCard p {
+  font-size: 14px;
+  color: #555;
+  padding: 5px 0;
+}
+
   
