--- a/src/components/cardvisible.module.css
+++ b/src/components/cardvisible.module.css
@@ -1,30 +1,22 @@
+
 /* cardvisible.module.css */
+
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Para centrar la tarjeta y el resto de los elementos */
+  justify-content: center;
+  height: 100vh;
+}
 
 .card {
   position: relative;
   border: 1px solid #ccc;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.171);
-  transition: filter 0.3s ease; /* Animación para suavizar el cambio de desenfoque */
-  display: flex; /* Para usar Flexbox */
-  justify-content: center; /* Centrar horizontalmente */
-  align-items: center; /* Centrar verticalmente */
-  height: 100vh; /* Para ocupar todo el alto del viewport */
-  background: linear-gradient(to bottom, #f0e68c00, #dda0dd00); /* Opcional: para un fondo más visual */
-}
-
-.blurred {
-  filter: blur(10px); /* Nivel inicial de desenfoque */
-}
-
-.clear {
-  filter: none; /* Sin desenfoque */
-}
-
-.player-info {
-  margin: 10px 0;
+  background-color: rgba(255, 255, 255, 0.26);
+  transition: filter 0.3s ease;
 }
 
 .select-player {
@@ -32,8 +24,29 @@
 }
 
 .select-player select {
-  padding: 5px;
+  padding: 10px;
   font-size: 16px;
   border-radius: 5px;
   border: 1px solid #ccc;
+}
+
+.attemptsList {
+  margin-top: 20px;
+  width: 300px;
+  text-align: center;
+}
+
+.attempt {
+  padding: 10px;
+  border-radius: 5px;
+  margin: 5px 0;
+  transition: background-color 0.3s ease;
+}
+
+.incorrect {
+  background-color: #ff6961; /* Rojo para intentos incorrectos */
+}
+
+.correct {
+  background-color: #77dd77; /* Verde para intento correcto */
 }
