--- a/src/components/cardvisible.module.css
+++ b/src/components/cardvisible.module.css
@@ -16,7 +16,7 @@
   border-radius: 15px;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.26);
-  transition: filter 0.3s ease;
+  transition: all 0.3s ease; /* Transición para suavizar el cambio */
 }
 
 .search-bar {
